common: mask out virtual modifiers in key grabbing code

gdk_keymap_map_virtual_modifiers converts all the virtual
modifiers in the state mask (Super, Hyper, Meta, etc) of a
key event to the real modifiers they're mapped to. This
call is needed, because XGrabKey and friends only work
with real modifiers (Mod1, Mod2, ...).

Unforunately, gdk_keymap_map_virtual_modifiers doesn't mask
out the virtual modifers, it merely adds in the associated
real ones.

This commit does the masking immediately following the call,
so that virtual modifier don't ultimately get passed to X
when setting up the key grabs.

https://bugzilla.gnome.org/show_bug.cgi?id=676300
(cherry picked from commit 53cbbc00df3884bc3ca87e2818a08ba3ba2fabac)